--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Github User Dicoding</string>
+    <string name="main_search_not_found">Keyword yang anda cari tidak ditemukan</string>
     <string name="detail_personal">Personal</string>
     <string name="detail_user_statistic">User Statistic</string>
     <string name="detail_user_following">Following</string>
@@ -8,4 +9,5 @@
     <string name="splash_app_name">Github User By Dicoding</string>
     <string name="search">Search</string>
     <string name="search_hint">Masukan username</string>
+
 </resources>
