update favorite item

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Github User Dicoding</string>
+    <string name="splash_app_name">Github User By Dicoding</string>
     <string name="main_search_not_found">Keyword yang anda cari tidak ditemukan</string>
     <string name="detail_personal">Personal</string>
     <string name="detail_user_statistic">User Statistic</string>
@@ -7,7 +8,7 @@
     <string name="detail_user_follower">Pengikut</string>
     <string name="detail_user_repository">Repositori</string>
     <string name="detail_user_company_not_found">Tidak ada perusahaan</string>
-    <string name="splash_app_name">Github User By Dicoding</string>
+
     <string name="search">Search</string>
     <string name="search_hint">Masukan username</string>
     <string name="detail_user_empty_follower">User belum memiliki Pengikut</string>
@@ -15,4 +16,5 @@
 
     <string name="alert_no_network">Kamu tidak terhubung dengan Internet. Coba periksa kembali koneksimu</string>
     <string name="try_again">Coba Lagi</string>
+    <string name="favorite">favorite</string>
 </resources>
